--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-asdf
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="kr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SimpleMyWeb</title>
+</head>
+<body>
+  <h1>HellooooooooO!!</h1>
+</body>
+</html>
