--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SimpleMyWeb</title>
+  <title>해피투씨유</title>
 </head>
+<header>
+  클래스 홈
+  LIVE홈
+  검색어를 입력해주세요
+  선생님 신청
+  내 콘텐츠
+  알림
+  찜목록
+
+</header>
 <body>
   <h1>HellooooooooO!!</h1>
 </body>
+<footer>
+  해피투씨유 선생님 고객센터 지
+회사소개 블로그 언론보도
+선생님 신청
+전화: 02.2038.4330
+운영시간: 평일 09:00 ~ 20:00
+
+(주)해피투씨유ㅣ대표. : 이예진ㅣ사업자 등록 번호: 297-87-01570ㅣ개인정보 관리책임자: 유정아ㅣ관리책임자 이메일: helloyuja@mealgen.net
+회사 주소 : 서울특별시 종로구 종로6 5층 스타트업 빌리지
+
+이용약관 | 개인정보취급방침
+</footer>
 </html>
