--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">클래스 홈</a>
+            <a class="" href="#">클래스 홈</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">LIVE 홈</a>
+            <a class="" href="#">LIVE 홈</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">검색어를 입력해주세요</a>
