--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="" href="#">클래스 홈</a>
+            <a class="nav-link nav-black" href="#">클래스 홈</a>
           </li>
           <li class="nav-item">
-            <a class="" href="#">LIVE 홈</a>
+            <a class="nav-link nav-black" href="#">LIVE 홈</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">검색어를 입력해주세요</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">선생님 신청</a>
+            <a class="nav-link nav-black" href="#">선생님 신청</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">내 콘텐츠</a>
+            <a class="nav-link nav-black" href="#">내 콘텐츠</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">알림</a>
@@ -106,7 +106,7 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">This Week 이번주 LIVE!</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
