--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link nav-black" href="#">클래스 홈</a>
+          <li class="nav-item nav-black">
+            <a class="nav-link" href="#">클래스 홈</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-black" href="#">LIVE 홈</a>
