--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
     </div>
     <!-- /.row -->
 
+    <section class="Mask">
+
+    </section>
+
     <!-- Features Section -->
     <div class="row">
       <div class="col-lg-6">
