--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-white fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/logo-black.svg"
-     class="LOGOBlack"></a>
+      <a class="navbar-brand" href="#"><img src="img/logo-black.svg" class="LOGOBlack"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -224,7 +223,10 @@
     <!-- /.row -->
 
     <section class="Mask">
-
+      <div class="container text-center">
+        <h3 class="mb-2 mt-2">ULTIRACER is Designed to Enjoy Bike Riding with User's own Bikes.</h3>
+        <h4 class="mb-2 mt-2">By putting their own bike on the ULTIRACER, They will face a Whole New Experience.</h4>
+      </div>
     </section>
 
     <!-- Features Section -->
