--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
     <!-- /.row -->
 
-    <section class="Mask">
+    <section class="section-service">
       <div class="container text-center">
         <h3 class="mb-2 mt-2">ULTIRACER is Designed to Enjoy Bike Riding with User's own Bikes.</h3>
         <h4 class="mb-2 mt-2">By putting their own bike on the ULTIRACER, They will face a Whole New Experience.</h4>
