--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
           <img src="img/banner-1.png" srcset="img/banner-1@2x.png 2x,
              img/banner-1@3x.png 3x" class="BANNER_1">
         </div>
