--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
-          <img src="img/banner-1.png" srcset="img/banner-1@2x.png 2x,
-             img/banner-1@3x.png 3x" class="BANNER_1">
+          <!-- <img src="img/banner-1.png" srcset="img/banner-1@2x.png 2x,
+             img/banner-1@3x.png 3x" class="BANNER_1"> -->
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-          <img src="img/banner-2.png" srcset="img/banner-2@2x.png 2x,
-             img/banner-2@3x.png 3x" class="BANNER_1">
+        <div class="carousel-item" style="background-image: url('img/banner-2.png')">
+          <!-- <img src="img/banner-2.png" srcset="img/banner-2@2x.png 2x,
+             img/banner-2@3x.png 3x" class="BANNER_1"> -->
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-          <img src="img/banner-3.png" srcset="img/banner-3@2x.png 2x,
-             img/banner-3@3x.png 3x" class="BANNER_1">
+        <div class="carousel-item" style="background-image: url('img/banner-3.png')">
+          <!-- <img src="img/banner-3.png" srcset="img/banner-3@2x.png 2x,
+             img/banner-3@3x.png 3x" class="BANNER_1"> -->
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
