--- a/index.html
+++ b/index.html
@@ -102,10 +102,53 @@
     </div>
   </header>
 
+<!-- Category -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-1 mb-4">
+        1
+      </div>
+      <div class="col-lg-1 mb-4">
+        2
+      </div>
+      <div class="col-lg-1 mb-4">
+        3
+      </div>
+      <div class="col-lg-1 mb-4">
+        4
+      </div>
+      <div class="col-lg-1 mb-4">
+        5
+      </div>
+      <div class="col-lg-1 mb-4">
+        6
+      </div>
+      <div class="col-lg-1 mb-4">
+        7
+      </div>
+      <div class="col-lg-1 mb-4">
+        8
+      </div>
+      <div class="col-lg-1 mb-4">
+        9
+      </div>
+      <div class="col-lg-1 mb-4">
+        10
+      </div>
+      <div class="col-lg-1 mb-4">
+        11
+      </div>
+      <div class="col-lg-1 mb-4">
+        12
+      </div>
+    </div>
+
+  </div>
+
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">This Week 이번주 LIVE!</h1>
+    <h3 class="my-4">This Week 이번주 LIVE!</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
