--- a/index.html
+++ b/index.html
@@ -106,40 +106,40 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-1 mb-4">
-        1
+        <a href="#" class="btn btn-primary">1</a>
       </div>
       <div class="col-lg-1 mb-4">
-        2
+        <a href="#" class="btn btn-primary">2</a>
       </div>
       <div class="col-lg-1 mb-4">
-        3
+        <a href="#" class="btn btn-primary">3</a>
       </div>
       <div class="col-lg-1 mb-4">
-        4
+        <a href="#" class="btn btn-primary">4</a>
       </div>
       <div class="col-lg-1 mb-4">
-        5
+        <a href="#" class="btn btn-primary">5</a>
       </div>
       <div class="col-lg-1 mb-4">
-        6
+        <a href="#" class="btn btn-primary">6</a>
       </div>
       <div class="col-lg-1 mb-4">
-        7
+        <a href="#" class="btn btn-primary">7</a>
       </div>
       <div class="col-lg-1 mb-4">
-        8
+        <a href="#" class="btn btn-primary">8</a>
       </div>
       <div class="col-lg-1 mb-4">
-        9
+        <a href="#" class="btn btn-primary">9</a>
       </div>
       <div class="col-lg-1 mb-4">
-        10
+        <a href="#" class="btn btn-primary">10</a>
       </div>
       <div class="col-lg-1 mb-4">
-        11
+        <a href="#" class="btn btn-primary">11</a>
       </div>
       <div class="col-lg-1 mb-4">
-        12
+        <a href="#" class="btn btn-primary">12</a>
       </div>
     </div>
 
@@ -189,8 +189,8 @@
     </div>
     <!-- /.row -->
 
-    <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+    <!-- 온라인 VOD 클래스 -->
+    <h2>온라인 VOD 클래스</h2>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -225,40 +225,6 @@
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel
               quam!</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Four</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Five</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Six</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo,
-              esse.</p>
           </div>
         </div>
       </div>
