--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </header>
 
 <!-- Category -->
-  <div class="container">
+  <div class="container mt-4">
     <div class="row">
       <div class="col-lg-1 mb-4">
         <a href="#" class="btn btn-primary">1</a>
