--- a/index.html
+++ b/index.html
@@ -106,40 +106,40 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">1</a>
+        <a href="#" class="btn btn-hts">1</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">2</a>
+        <a href="#" class="btn btn-hts">2</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">3</a>
+        <a href="#" class="btn btn-hts">3</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">4</a>
+        <a href="#" class="btn btn-hts">4</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">5</a>
+        <a href="#" class="btn btn-hts">5</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">6</a>
+        <a href="#" class="btn btn-hts">6</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">7</a>
+        <a href="#" class="btn btn-hts">7</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">8</a>
+        <a href="#" class="btn btn-hts">8</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">9</a>
+        <a href="#" class="btn btn-hts">9</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">10</a>
+        <a href="#" class="btn btn-hts">10</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">11</a>
+        <a href="#" class="btn btn-hts">11</a>
       </div>
       <div class="col-lg-1 mb-4">
-        <a href="#" class="btn btn-primary">12</a>
+        <a href="#" class="btn btn-hts">12</a>
       </div>
     </div>
 
