--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="#">클래스 홈</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-black" href="#">LIVE 홈</a>
+          <a class="nav-link nav-black" href="class_live.html">LIVE 홈</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">검색어를 입력해주세요</a>
@@ -20,7 +20,7 @@
           <a class="nav-link nav-black" href="#">선생님 신청</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-black" href="#">내 콘텐츠</a>
+          <a class="nav-link nav-black" href="mycontents.html">내 콘텐츠</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">알림</a>
