--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </nav> -->
-<% include ./nav %>
+<% include ./nav.html %>
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -438,7 +438,7 @@
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
     </div>
   </footer> -->
-  <% include ./footer %>
+  <% include ./footer.html %>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
