--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/happytoseeyou.css" rel="stylesheet">
-  <script src="js/includeHTML.js"></script>
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
 
 </head>
 
@@ -67,7 +67,8 @@
       </div>
     </div>
   </nav> -->
-  <body>에 <div include-html="nav.html"></div>
+  <body>
+    <div w3-include-html="nav.html"></div>
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -443,12 +444,12 @@
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
     </div>
   </footer> -->
-  <div include-html="footer.html"></div>
+  <div w3-include-html="footer.html"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script>includeHTML();</script>
+  <script> w3.includeHTML();</script>
 
 </body>
 
