--- a/mycontents.html
+++ b/mycontents.html
@@ -14,24 +14,24 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/happytoseeyou.css" rel="stylesheet">
-
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 
 <body>
-  <% include ./nav %>
+  <div w3-include-html="nav.html"></div>
+
   <!-- Page Content -->
   <div class="container">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
       블라블라블라블라
   </div>
-
-  <% include ./footer %>
+  <div w3-include-html="footer.html"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script> w3.includeHTML();</script>
 </body>
 
 </html>
