--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="footer-hts">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
     </div>
