--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,10 @@
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5 mt-5 footer-hts">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="pt-3 text-black">해피투씨유</p>
+      <p class="pt-3 text-black">선생님</p>
+      <p class="pt-3 text-black">고객센터</p>
+      <p class="pt-3 text-black">지원</p>
     </div>
     <!-- /.container -->
   </footer>
