--- a/mycontents.html
+++ b/mycontents.html
@@ -24,14 +24,62 @@
   <div class="container">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
-      블라블라블라블라
+      <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-8 align-self-baseline">
+          <div class="tab-contests">
+            <button class="tablinks" onclick="openmenu(event, 'live')">LIVE 내역</button>
+            <button class="tablinks" onclick="openmenu(event, 'online')">온라인 내역</button>
+            <button class="tablinks" onclick="openmenu(event, 'offline')">오프라인 내역</button>
+          </div>
+
+          <div id="live" class="tabcontent active">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+              <div class="col-lg-8 align-self-baseline">
+                <div class="tab">
+                  <button class="tablinks" onclick="openmenu(event, 'live')">LIVE 내역</button>
+                  <button class="tablinks" onclick="openmenu(event, 'online')">온라인 내역</button>
+                  <button class="tablinks" onclick="openmenu(event, 'offline')">오프라인 내역</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="online" class="tabcontent">
+            bbb
+          </div>
+
+          <div id="offline" class="tabcontent">
+            ccc
+          </div>
+
+        </div>
+
+
+      </div>
+  </div>
   </div>
   <div w3-include-html="footer.html"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script> w3.includeHTML();</script>
+  <script>
+    w3.includeHTML();
+
+    function openmenu(evt, menu) {
+      var i, tabcontent, tablinks;
+      tabcontent = document.getElementsByClassName("tabcontent");
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+      }
+      tablinks = document.getElementsByClassName("tablinks");
+      for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+      }
+      document.getElementById(menu).style.display = "block";
+      evt.currentTarget.className += " active";
+    }
+  </script>
 </body>
 
 </html>
