--- a/nav.html
+++ b/nav.html
@@ -8,28 +8,28 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item nav-black">
-          <a class="nav-link" href="#">클래스 홈</a>
+          <a class="nav-link text-black" href="#">클래스 홈</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-black" href="class_live.html">LIVE 홈</a>
+          <a class="nav-link text-black" href="class_live.html">LIVE 홈</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">검색어를 입력해주세요</a>
+          <a class="nav-link text-black" href="#">검색어를 입력해주세요</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-black" href="#">선생님 신청</a>
+          <a class="nav-link text-black" href="#">선생님 신청</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-black" href="mycontents.html">내 콘텐츠</a>
+          <a class="nav-link text-black" href="mycontents.html">내 콘텐츠</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">알림</a>
+          <a class="nav-link text-black" href="#">알림</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">찜목록</a>
+          <a class="nav-link text-black" href="#">찜목록</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Other Pages
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
